org.sourcepit.antlr4.eclipse.lang/gen/org/sourcepit/antlr4/eclipse/lang/ANTLRv4Parser.java
// Generated from ANTLRv4Parser.g4 by ANTLR 4.5.1

/**
 * Copyright 2015 Bernd Vogt and others.
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.sourcepit.antlr4.eclipse.lang;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class ANTLRv4Parser extends Parser {
   static {
      RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
   }

   protected static final DFA[] _decisionToDFA;
   protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
   public static final int TOKEN_REF = 1, RULE_REF = 2, LEXER_CHAR_SET = 3, DOC_COMMENT = 4, BLOCK_COMMENT = 5,
      LINE_COMMENT = 6, BEGIN_ARG_ACTION = 7, OPTIONS = 8, TOKENS = 9, IMPORT = 10, FRAGMENT = 11, LEXER = 12,
      PARSER = 13, GRAMMAR = 14, PROTECTED = 15, PUBLIC = 16, PRIVATE = 17, RETURNS = 18, LOCALS = 19, THROWS = 20,
      CATCH = 21, FINALLY = 22, MODE = 23, COLON = 24, COLONCOLON = 25, COMMA = 26, SEMI = 27, LPAREN = 28, RPAREN = 29,
      RARROW = 30, LT = 31, GT = 32, ASSIGN = 33, QUESTION = 34, STAR = 35, PLUS = 36, PLUS_ASSIGN = 37, OR = 38,
      DOLLAR = 39, DOT = 40, RANGE = 41, AT = 42, POUND = 43, NOT = 44, RBRACE = 45, ID = 46, INT = 47,
      STRING_LITERAL = 48, UNTERMINATED_STRING_LITERAL = 49, WS = 50, ACTION = 51, ERRCHAR = 52, ARG_ACTION = 53,
      UNTERMINATED_ARG_ACTION = 54, UNTERMINATED_CHAR_SET = 55;
   public static final int RULE_grammarSpec = 0, RULE_grammarType = 1, RULE_prequelConstruct = 2, RULE_optionsSpec = 3,
      RULE_option = 4, RULE_optionValue = 5, RULE_delegateGrammars = 6, RULE_delegateGrammar = 7, RULE_tokensSpec = 8,
      RULE_action = 9, RULE_actionScopeName = 10, RULE_modeSpec = 11, RULE_rules = 12, RULE_ruleSpec = 13,
      RULE_parserRuleSpec = 14, RULE_exceptionGroup = 15, RULE_exceptionHandler = 16, RULE_finallyClause = 17,
      RULE_rulePrequel = 18, RULE_ruleReturns = 19, RULE_throwsSpec = 20, RULE_localsSpec = 21, RULE_ruleAction = 22,
      RULE_ruleModifiers = 23, RULE_ruleModifier = 24, RULE_ruleBlock = 25, RULE_ruleAltList = 26, RULE_labeledAlt = 27,
      RULE_lexerRule = 28, RULE_lexerRuleBlock = 29, RULE_lexerAltList = 30, RULE_lexerAlt = 31,
      RULE_lexerElements = 32, RULE_lexerElement = 33, RULE_labeledLexerElement = 34, RULE_lexerBlock = 35,
      RULE_lexerCommands = 36, RULE_lexerCommand = 37, RULE_lexerCommandName = 38, RULE_lexerCommandExpr = 39,
      RULE_altList = 40, RULE_alternative = 41, RULE_element = 42, RULE_labeledElement = 43, RULE_ebnf = 44,
      RULE_blockSuffix = 45, RULE_ebnfSuffix = 46, RULE_lexerAtom = 47, RULE_atom = 48, RULE_notSet = 49,
      RULE_blockSet = 50, RULE_setElement = 51, RULE_block = 52, RULE_ruleref = 53, RULE_range = 54, RULE_terminal = 55,
      RULE_elementOptions = 56, RULE_elementOption = 57, RULE_id = 58;
   public static final String[] ruleNames = { "grammarSpec", "grammarType", "prequelConstruct", "optionsSpec", "option",
      "optionValue", "delegateGrammars", "delegateGrammar", "tokensSpec", "action", "actionScopeName", "modeSpec",
      "rules", "ruleSpec", "parserRuleSpec", "exceptionGroup", "exceptionHandler", "finallyClause", "rulePrequel",
      "ruleReturns", "throwsSpec", "localsSpec", "ruleAction", "ruleModifiers", "ruleModifier", "ruleBlock",
      "ruleAltList", "labeledAlt", "lexerRule", "lexerRuleBlock", "lexerAltList", "lexerAlt", "lexerElements",
      "lexerElement", "labeledLexerElement", "lexerBlock", "lexerCommands", "lexerCommand", "lexerCommandName",
      "lexerCommandExpr", "altList", "alternative", "element", "labeledElement", "ebnf", "blockSuffix", "ebnfSuffix",
      "lexerAtom", "atom", "notSet", "blockSet", "setElement", "block", "ruleref", "range", "terminal",
      "elementOptions", "elementOption", "id" };

   private static final String[] _LITERAL_NAMES = { null, null, null, null, null, null, null, null, null, null,
      "'import'", "'fragment'", "'lexer'", "'parser'", "'grammar'", "'protected'", "'public'", "'private'", "'returns'",
      "'locals'", "'throws'", "'catch'", "'finally'", "'mode'", "':'", "'::'", "','", "';'", "'('", "')'", "'->'",
      "'<'", "'>'", "'='", "'?'", "'*'", "'+'", "'+='", "'|'", "'$'", "'.'", "'..'", "'@'", "'#'", "'~'", "'}'" };
   private static final String[] _SYMBOLIC_NAMES = { null, "TOKEN_REF", "RULE_REF", "LEXER_CHAR_SET", "DOC_COMMENT",
      "BLOCK_COMMENT", "LINE_COMMENT", "BEGIN_ARG_ACTION", "OPTIONS", "TOKENS", "IMPORT", "FRAGMENT", "LEXER", "PARSER",
      "GRAMMAR", "PROTECTED", "PUBLIC", "PRIVATE", "RETURNS", "LOCALS", "THROWS", "CATCH", "FINALLY", "MODE", "COLON",
      "COLONCOLON", "COMMA", "SEMI", "LPAREN", "RPAREN", "RARROW", "LT", "GT", "ASSIGN", "QUESTION", "STAR", "PLUS",
      "PLUS_ASSIGN", "OR", "DOLLAR", "DOT", "RANGE", "AT", "POUND", "NOT", "RBRACE", "ID", "INT", "STRING_LITERAL",
      "UNTERMINATED_STRING_LITERAL", "WS", "ACTION", "ERRCHAR", "ARG_ACTION", "UNTERMINATED_ARG_ACTION",
      "UNTERMINATED_CHAR_SET" };
   public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

   /**
    * @deprecated Use {@link #VOCABULARY} instead.
    */
   @Deprecated
   public static final String[] tokenNames;

   static {
      tokenNames = new String[_SYMBOLIC_NAMES.length];
      for (int i = 0; i < tokenNames.length; i++) {
         tokenNames[i] = VOCABULARY.getLiteralName(i);
         if (tokenNames[i] == null) {
            tokenNames[i] = VOCABULARY.getSymbolicName(i);
         }

         if (tokenNames[i] == null) {
            tokenNames[i] = "<INVALID>";
         }
      }
   }

   @Override
   @Deprecated
   public String[] getTokenNames() {
      return tokenNames;
   }

   @Override

   public Vocabulary getVocabulary() {
      return VOCABULARY;
   }

   @Override
   public String getGrammarFileName() {
      return "ANTLRv4Parser.g4";
   }

   @Override
   public String[] getRuleNames() {
      return ruleNames;
   }

   @Override
   public String getSerializedATN() {
      return _serializedATN;
   }

   @Override
   public ATN getATN() {
      return _ATN;
   }

   public ANTLRv4Parser(TokenStream input) {
      super(input);
      _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
   }

   public static class GrammarSpecContext extends ParserRuleContext {
      public GrammarTypeContext grammarType() {
         return getRuleContext(GrammarTypeContext.class, 0);
      }

      public IdContext id() {
         return getRuleContext(IdContext.class, 0);
      }

      public TerminalNode SEMI() {
         return getToken(ANTLRv4Parser.SEMI, 0);
      }

      public RulesContext rules() {
         return getRuleContext(RulesContext.class, 0);
      }

      public TerminalNode EOF() {
         return getToken(ANTLRv4Parser.EOF, 0);
      }

      public TerminalNode DOC_COMMENT() {
         return getToken(ANTLRv4Parser.DOC_COMMENT, 0);
      }

      public List<PrequelConstructContext> prequelConstruct() {
         return getRuleContexts(PrequelConstructContext.class);
      }

      public PrequelConstructContext prequelConstruct(int i) {
         return getRuleContext(PrequelConstructContext.class, i);
      }

      public List<ModeSpecContext> modeSpec() {
         return getRuleContexts(ModeSpecContext.class);
      }

      public ModeSpecContext modeSpec(int i) {
         return getRuleContext(ModeSpecContext.class, i);
      }

      public GrammarSpecContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_grammarSpec;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).enterGrammarSpec(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).exitGrammarSpec(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof ANTLRv4ParserVisitor)
            return ((ANTLRv4ParserVisitor<? extends T>) visitor).visitGrammarSpec(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final GrammarSpecContext grammarSpec() throws RecognitionException {
      GrammarSpecContext _localctx = new GrammarSpecContext(_ctx, getState());
      enterRule(_localctx, 0, RULE_grammarSpec);
      int _la;
      try {
         enterOuterAlt(_localctx, 1);
         {
            setState(119);
            _la = _input.LA(1);
            if (_la == DOC_COMMENT) {
               {
                  setState(118);
                  match(DOC_COMMENT);
               }
            }

            setState(121);
            grammarType();
            setState(122);
            id();
            setState(123);
            match(SEMI);
            setState(127);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while ((((_la) & ~0x3f) == 0
               && ((1L << _la) & ((1L << OPTIONS) | (1L << TOKENS) | (1L << IMPORT) | (1L << AT))) != 0)) {
               {
                  {
                     setState(124);
                     prequelConstruct();
                  }
               }
               setState(129);
               _errHandler.sync(this);
               _la = _input.LA(1);
            }
            setState(130);
            rules();
            setState(134);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == MODE) {
               {
                  {
                     setState(131);
                     modeSpec();
                  }
               }
               setState(136);
               _errHandler.sync(this);
               _la = _input.LA(1);
            }
            setState(137);
            match(EOF);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class GrammarTypeContext extends ParserRuleContext {
      public TerminalNode LEXER() {
         return getToken(ANTLRv4Parser.LEXER, 0);
      }

      public TerminalNode GRAMMAR() {
         return getToken(ANTLRv4Parser.GRAMMAR, 0);
      }

      public TerminalNode PARSER() {
         return getToken(ANTLRv4Parser.PARSER, 0);
      }

      public GrammarTypeContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_grammarType;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).enterGrammarType(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).exitGrammarType(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof ANTLRv4ParserVisitor)
            return ((ANTLRv4ParserVisitor<? extends T>) visitor).visitGrammarType(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final GrammarTypeContext grammarType() throws RecognitionException {
      GrammarTypeContext _localctx = new GrammarTypeContext(_ctx, getState());
      enterRule(_localctx, 2, RULE_grammarType);
      try {
         enterOuterAlt(_localctx, 1);
         {
            setState(144);
            switch (_input.LA(1)) {
               case LEXER : {
                  setState(139);
                  match(LEXER);
                  setState(140);
                  match(GRAMMAR);
               }
                  break;
               case PARSER : {
                  setState(141);
                  match(PARSER);
                  setState(142);
                  match(GRAMMAR);
               }
                  break;
               case GRAMMAR : {
                  setState(143);
                  match(GRAMMAR);
               }
                  break;
               default :
                  throw new NoViableAltException(this);
            }
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class PrequelConstructContext extends ParserRuleContext {
      public OptionsSpecContext optionsSpec() {
         return getRuleContext(OptionsSpecContext.class, 0);
      }

      public DelegateGrammarsContext delegateGrammars() {
         return getRuleContext(DelegateGrammarsContext.class, 0);
      }

      public TokensSpecContext tokensSpec() {
         return getRuleContext(TokensSpecContext.class, 0);
      }

      public ActionContext action() {
         return getRuleContext(ActionContext.class, 0);
      }

      public PrequelConstructContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_prequelConstruct;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).enterPrequelConstruct(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).exitPrequelConstruct(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof ANTLRv4ParserVisitor)
            return ((ANTLRv4ParserVisitor<? extends T>) visitor).visitPrequelConstruct(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final PrequelConstructContext prequelConstruct() throws RecognitionException {
      PrequelConstructContext _localctx = new PrequelConstructContext(_ctx, getState());
      enterRule(_localctx, 4, RULE_prequelConstruct);
      try {
         setState(150);
         switch (_input.LA(1)) {
            case OPTIONS :
               enterOuterAlt(_localctx, 1); {
               setState(146);
               optionsSpec();
            }
               break;
            case IMPORT :
               enterOuterAlt(_localctx, 2); {
               setState(147);
               delegateGrammars();
            }
               break;
            case TOKENS :
               enterOuterAlt(_localctx, 3); {
               setState(148);
               tokensSpec();
            }
               break;
            case AT :
               enterOuterAlt(_localctx, 4); {
               setState(149);
               action();
            }
               break;
            default :
               throw new NoViableAltException(this);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class OptionsSpecContext extends ParserRuleContext {
      public TerminalNode OPTIONS() {
         return getToken(ANTLRv4Parser.OPTIONS, 0);
      }

      public TerminalNode RBRACE() {
         return getToken(ANTLRv4Parser.RBRACE, 0);
      }

      public List<OptionContext> option() {
         return getRuleContexts(OptionContext.class);
      }

      public OptionContext option(int i) {
         return getRuleContext(OptionContext.class, i);
      }

      public List<TerminalNode> SEMI() {
         return getTokens(ANTLRv4Parser.SEMI);
      }

      public TerminalNode SEMI(int i) {
         return getToken(ANTLRv4Parser.SEMI, i);
      }

      public OptionsSpecContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_optionsSpec;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).enterOptionsSpec(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).exitOptionsSpec(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof ANTLRv4ParserVisitor)
            return ((ANTLRv4ParserVisitor<? extends T>) visitor).visitOptionsSpec(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final OptionsSpecContext optionsSpec() throws RecognitionException {
      OptionsSpecContext _localctx = new OptionsSpecContext(_ctx, getState());
      enterRule(_localctx, 6, RULE_optionsSpec);
      int _la;
      try {
         enterOuterAlt(_localctx, 1);
         {
            setState(152);
            match(OPTIONS);
            setState(158);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == TOKEN_REF || _la == RULE_REF) {
               {
                  {
                     setState(153);
                     option();
                     setState(154);
                     match(SEMI);
                  }
               }
               setState(160);
               _errHandler.sync(this);
               _la = _input.LA(1);
            }
            setState(161);
            match(RBRACE);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class OptionContext extends ParserRuleContext {
      public IdContext id() {
         return getRuleContext(IdContext.class, 0);
      }

      public TerminalNode ASSIGN() {
         return getToken(ANTLRv4Parser.ASSIGN, 0);
      }

      public OptionValueContext optionValue() {
         return getRuleContext(OptionValueContext.class, 0);
      }

      public OptionContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_option;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).enterOption(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).exitOption(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof ANTLRv4ParserVisitor)
            return ((ANTLRv4ParserVisitor<? extends T>) visitor).visitOption(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final OptionContext option() throws RecognitionException {
      OptionContext _localctx = new OptionContext(_ctx, getState());
      enterRule(_localctx, 8, RULE_option);
      try {
         enterOuterAlt(_localctx, 1);
         {
            setState(163);
            id();
            setState(164);
            match(ASSIGN);
            setState(165);
            optionValue();
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class OptionValueContext extends ParserRuleContext {
      public List<IdContext> id() {
         return getRuleContexts(IdContext.class);
      }

      public IdContext id(int i) {
         return getRuleContext(IdContext.class, i);
      }

      public List<TerminalNode> DOT() {
         return getTokens(ANTLRv4Parser.DOT);
      }

      public TerminalNode DOT(int i) {
         return getToken(ANTLRv4Parser.DOT, i);
      }

      public TerminalNode STRING_LITERAL() {
         return getToken(ANTLRv4Parser.STRING_LITERAL, 0);
      }

      public TerminalNode ACTION() {
         return getToken(ANTLRv4Parser.ACTION, 0);
      }

      public TerminalNode INT() {
         return getToken(ANTLRv4Parser.INT, 0);
      }

      public OptionValueContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_optionValue;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).enterOptionValue(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof ANTLRv4ParserListener)
            ((ANTLRv4ParserListener) listener).exitOptionValue(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof ANTLRv4ParserVisitor)
            return ((ANTLRv4ParserVisitor<? extends T>) visitor).visitOptionValue(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final OptionValueContext optionValue() throws RecognitionException {
      OptionValueContext _localctx = new OptionValueContext(_ctx, getState());
      enterRule(_localctx, 10, RULE_optionValue);
      int _la;
      try {
         setState(178);
         switch (_input.LA(1)) {
            case TOKEN_REF :
            case RULE_REF :
               enterOuterAlt(_localctx, 1); {
               setState(167);
               id();
               setState(172);
               _errHandler.sync(this);
               _la = _input.LA(1);
               while (_la == DOT) {
                  {
                     {
                        setState(168);
                        match(DOT);
                        setState(169);
                        id();
                     }
                  }
                  setState(174);
                  _errHandler.sync(this);
                  _la = _input.LA(1);
               }
            }
               break;
            case STRING_LITERAL :
               enterOuterAlt(_localctx, 2); {
               setState(175);
               match(STRING_LITERAL);
            }
               break;
            case ACTION :
               enterOuterAlt(_localctx, 3); {
               setState(176);
               match(ACTION);
            }
               break;
            case INT :
               enterOuterAlt(_localctx, 4); {
               setState(177);
               match(INT);
            }
               break;
            default :
               throw new NoViableAltException(this);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class DelegateGrammarsContext extends ParserRuleContext {
      public TerminalNode IMPORT() {
         return getToken(ANTLRv4Parser.IMPORT, 0);
      }

      public List<DelegateGrammarContext> delegateGrammar() {
         return getRuleContexts(DelegateGrammarContext.class);
      }

      public DelegateGrammarContext delegateGrammar(int i) {
         return getRuleContext(DelegateGrammarContext.class, i);
      }

      public TerminalNode SEMI() {
         return getToken(ANTLRv4Parser.SEMI, 0);
      }

      public List<TerminalNode> COMMA() {
         return getTokens(ANTLRv4Parser.COMMA);
      }

      public TerminalNode COMMA(int i) {
         return getToken(ANTLRv4Parser.COMMA, i);
      }

      public DelegateGrammarsContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_delegateGrammars;
      }
